# escl-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
examples/: scan.rs
src/: capabilities.rs  lib.rs  settings.rs  status.rs
test-data/capabilities/: brother_mfc_j497dw.xml  canon_ts5300_series.xml  canon_ts7450.xml
