[package]
name = "escl"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/escl-rs"
description = "A Rust library for using scanners via the eSCL protocol (scanning over network)"

[dependencies]
futures-util = "0.3.30"
mdns = "3.0.0"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.35.1", default-features = false, features = ["macros", "rt-multi-thread"] }
